--- a/SSHAARP_package/SSHAARP/vignettes/vignette.Rmd
+++ b/SSHAARP_package/SSHAARP/vignettes/vignette.Rmd
@@ -19,7 +19,7 @@ Future plans for SSHAARP include producing heat maps based on allelic frequencie
 
 SSHAARP obtains HLA amino acid alignments from the IPD-IMGT/HLA GitHub repository at: https://github.com/ANHIG/IMGTHLA/tree/Latest/alignments.
 
-The required Solberg dataset (See: doi: 10.1016/j.humimm.2008.05.001) file is the 1-locus-alleles.dat file in the results.zip archive at http://pypop.org/popdata/. Columns of the Solberg dataset that are pertinent to this package, along with an explanation of their contents, are as follows: 
+The required Solberg dataset (See: doi: 10.1016/j.humimm.2008.05.001) file is the 1-locus-alleles.dat file in the results.zip archive at http://pypop.org/popdata/. The Solberg dataset is also incorporated into SSHAARP as "solberg_dataset". Columns of the Solberg dataset that are pertinent to this package, along with an explanation of their contents, are as follows: 
   
   **popname** - contains the population name, followed by a year, indicating the year of publication of the literature the population information was derived from
 
@@ -122,7 +122,7 @@ dataSubset() returns a modified version of the Solberg dataset that includes a c
 ```
 Four lines of the Solberg dataset prior to the application of dataSubset(); note that population names are unsorted, data for multiple HLA loci are included, and coordinates in the latit and longit columns are in cardinal format:
 
->dataset[c(1,2,300,600, 1000),]
+>solberg_dataset[c(1,2,300,600, 1000),]
 
      dataset     popname contin complex   latit  longit           coord locus allele_v2
 1        lit Korean_1999    NEA       3  37.00N 127.30E  37.00N 127.30E  DRB1      1302
@@ -140,7 +140,7 @@ Four lines of the Solberg dataset prior to the application of dataSubset(); note
 
 Five lines of the modified Solberg dataset returned by dataSubset(), where the input dataset is the Solberg dataset; note that population names are in lexicographic order, the only locus returned is the locus provided in the motif (i.e. DRB1), the addition of a new locus_allele column, and coordinates in the latit and longit columns are in Cartesian format:
 ```
->dataSubset(dataset, “DRB1*26F~28E~30Y”)[c(1,2,300,600, 1000),]
+>dataSubset(solberg_dataset, “DRB1*26F~28E~30Y”)[c(1,2,300,600, 1000),]
 
       dataset        popname contin complex latit longit         coord locus allele_v2 allele_v3
 8615      lit      Ache_2003    SAM       1   -24    -56       24S 56W  DRB1      0403     04:03
@@ -167,13 +167,13 @@ countSpaces() returns a vector of the number of spaces between each set of non-s
 
 ### PALM() 
 
-PALM() produces a frequency heatmap for a specified amino-acid motif, based on the allele frequency data in the Solberg dataset using the Generic Mapping Tools (GMT) R Package, which is an interface between R and the GMT Map-Making software. GMT software is required for this function and can be downloaded at https://www.soest.hawaii.edu/gmt/. The final output of PALM() is a heatmap saved under the filename "basemap.jpg" as a JPEG in the user's working directory. 
+PALM() produces a frequency heatmap for a specified amino-acid motif, based on the allele frequency data in the Solberg dataset using the Generic Mapping Tools (GMT) R Package, which is an interface between R and the GMT Map-Making software. GMT software is required for this function and can be downloaded at https://www.soest.hawaii.edu/gmt/. The final output of PALM() is a heatmap saved under the filename as "theinputmotif.jpg" as a JPEG in the user's working directory. 
 
 Two default parameters are set for PALM(), color = TRUE, and filter_migrant = TRUE. When color is set to TRUE, PALM generates a color heatmap; when color is set to FALSE, a greyscale heatmap is generated. When filter_migrant is set to TRUE, populations from the OTH region and populations with complexity values that have the ‘mig’ suffix are excluded from the heatmap plot. When filter_migrant is set to FALSE, these populations are included in the heatmap plot.
 
 ```
 #color heatmap plot
->PALM(Solberg_datset, "DRB1*26F~28E~30Y" )
+>PALM(solberg_dataset, "DRB1*26F~28E~30Y" )
 ```
 
 ```{r, out.width='100%', fig.align='center', fig.cap='...', , echo=FALSE}
@@ -182,7 +182,7 @@ knitr::include_graphics("basemap_color.jpg")
   
 ```
 #greyscale heatmap plot
->PALM(Solberg_datset, "DRB1*26F~28E~30Y", color=FALSE)
+>PALM(solberg_dataset, "DRB1*26F~28E~30Y", color=FALSE)
 ```
 
 ```{r, out.width='100%', fig.align='center', fig.cap='...', echo=FALSE}
