--- a/SSHAARP_package/SSHAARP/vignettes/vignette.Rmd
+++ b/SSHAARP_package/SSHAARP/vignettes/vignette.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "SSHAARP: Searching Shared HLA Amino Acid Residue Prevalence"
 author: "Livia Tran - livtran@chori.org"
-date: "September 23, 2019"
+date: "September 29, 2019"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{SSHAARP Vignette}
@@ -86,8 +86,103 @@ Example output of BLAASD() for HLA-A, where the selected row outputs are 2 and 8
 8     A  01:01:01:08        A*01:01  A*01:01:01:08   M   A   V   M   A   P   R   T   L   L   L   L   L   S   G
 ```
 
+### motifCheck()
+motifCheck() checks the user-input motif for formatting errors, and examines the amino acid positions to see if they are in the alignment. If a formatting error or non-existent amino acid position is found in the user-input motif, an error message is returned. Otherwise, a list object containing the locus, motif, and AA_segments is returned.
+
+```
+Example output of motifCheck() for a motif with existent amino acid positions and no formatting errors:
+
+> motifCheck("DRB1*26F~28E~30Y")
+[[1]]
+[1] "DRB1"
+
+[[2]]
+[1] "26F" "28E" "30Y"
+
+[[3]]
+[[3]]$DRB1
+  locus   allele trimmed_allele   allele_name -29 -28 -27 -26 -25 -24
+1  DRB1 01:01:01     DRB1*01:01 DRB1*01:01:01   M   V   C   L   K   L
+2  DRB1 01:01:02     DRB1*01:01 DRB1*01:01:02   *   *   *   *   *   *
+3  DRB1 01:01:03     DRB1*01:01 DRB1*01:01:03   *   *   *   *   *   *
+  -23 -22 -21 -20 -19 -18 -17 -16 -15 -14 -13 -12 -11 -10 -9 -8 -7 -6 -5
+1   P   G   G   S   C   M   T   A   L   T   V   T   L   M  V  L  S  S  P
+2   *   *   *   *   *   *   *   *   *   *   *   *   *   *  *  *  *  *  *
+3   *   *   *   *   *   *   *   *   *   *   *   *   *   *  *  *  *  *  *
+  -4 -3 -2 -1 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
+1  L  A  L  A G D T R P R F L W  Q  L  K  F  E  C  H  F  F  N  G  T  E
+2  *  *  *  * * * * * * R F L W  Q  L  K  F  E  C  H  F  F  N  G  T  E
+3  *  *  *  * * * * * * R F L W  Q  L  K  F  E  C  H  F  F  N  G  T  E
+  23 24 25 26 InDel_1 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43
+1  R  V  R  L       .  L  E  R  C  I  Y  N  Q  E  E  S  V  R  F  D  S  D
+2  R  V  R  L       .  L  E  R  C  I  Y  N  Q  E  E  S  V  R  F  D  S  D
+3  R  V  R  L       .  L  E  R  C  I  Y  N  Q  E  E  S  V  R  F  D  S  D
+  44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
+1  V  G  E  Y  R  A  V  T  E  L  G  R  P  D  A  E  Y  W  N  S  Q  K  D
+2  V  G  E  Y  R  A  V  T  E  L  G  R  P  D  A  E  Y  W  N  S  Q  K  D
+3  V  G  E  Y  R  A  V  T  E  L  G  R  P  D  A  E  Y  W  N  S  Q  K  D
+  67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89
+1  L  L  E  Q  R  R  A  A  V  D  T  Y  C  R  H  N  Y  G  V  G  E  S  F
+2  L  L  E  Q  R  R  A  A  V  D  T  Y  C  R  H  N  Y  G  V  G  E  S  F
+3  L  L  E  Q  R  R  A  A  V  D  T  Y  C  R  H  N  Y  G  V  G  E  S  F
+  90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109
+1  T  V  Q  R  R  V  E  P  K  V   T   V   Y   P   S   K   T   Q   P   L
+2  T  V  Q  R  R  *  *  *  *  *   *   *   *   *   *   *   *   *   *   *
+3  T  V  Q  R  R  *  *  *  *  *   *   *   *   *   *   *   *   *   *   *
+  110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126
+1   Q   H   H   N   L   L   V   C   S   V   S   G   F   Y   P   G   S
+2   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *
+3   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *
+  127 128 129 130 131 132 133 134 135 136 137 138 139 140 141 142 143
+1   I   E   V   R   W   F   R   N   G   Q   E   E   K   A   G   V   V
+2   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *
+3   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *
+  144 145 146 147 148 149 150 151 152 153 154 155 156 157 158 159 160
+1   S   T   G   L   I   Q   N   G   D   W   T   F   Q   T   L   V   M
+2   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *
+3   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *
+  161 162 163 164 165 166 167 168 169 170 171 172 173 174 175 176 177
+1   L   E   T   V   P   R   S   G   E   V   Y   T   C   Q   V   E   H
+2   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *
+3   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *
+  178 179 180 181 182 183 184 185 186 187 188 189 190 191 192 193 194
+1   P   S   V   T   S   P   L   T   V   E   W   R   A   R   S   E   S
+2   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *
+3   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *
+  195 196 197 198 199 200 201 202 203 204 205 206 207 208 209 210 211
+1   A   Q   S   K   M   L   S   G   V   G   G   F   V   L   G   L   L
+2   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *
+3   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *
+  212 213 214 215 216 217 218 219 220 221 222 223 224 225 226 227 228
+1   F   L   G   A   G   L   F   I   Y   F   R   N   Q   K   G   H   S
+2   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *
+3   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *
+  229 230 231 232 233 234 235 236 237
+1   G   L   Q   P   T   G   F   L   S
+2   *   *   *   *   *   *   *   *   *
+3   *   *   *   *   *   *   *   *   *
+ [ reached 'max' / getOption("max.print") -- omitted 3155 rows ]
+```
+
+```
+Example of an incorrectly formatted motif, where two asterisks are used to separate the locus and first amino acid position-pair:
+
+> motifCheck("DRB1**26F~28E~30Y")
+
+[1] "Your motif is formatted incorrectly. Please use the Locus*##$~##$~##$ format, where ## identifies a peptide position, and $ identifies an amino acid residue."
+```
+
+```
+Example of a motif with an amino acid position that does not exist:
+
+> motifCheck("DRB1*26F~28E~300000Y")
+
+[1] "One or more of your amino acid positions is not present in the alignment. Please make sure amino acid positions of interest are present in the current release of IPD-IMGT/HLA alignments."
+```
+
 ### findMotif()
 findMotif() parses the provided amino-acid motif, which should be written as `locus*##$~##$~##$`, where ## identifies a peptide position, and $ identifies an amino acid residue. Motifs can include any number of amino acids positions. The following output is an example of the 1st, 5th, 9th, and 10th DRB1 alleles that have the `DRB1*26F~28E~30Y` motif. 
+
 ```
 >findMotif("DRB1*26F~28E~30Y")[c(1,5,9,10), 1:65]
 
@@ -138,8 +233,9 @@ Four lines of the Solberg dataset prior to the application of dataSubset(); note
 1000     29:02     0.06716            9     134
 ```
 
-Five lines of the modified Solberg dataset returned by dataSubset(), where the input dataset is the Solberg dataset; note that population names are in lexicographic order, the only locus returned is the locus provided in the motif (i.e. DRB1), the addition of a new locus_allele column, and coordinates in the latit and longit columns are in Cartesian format:
 ```
+Five lines of the modified Solberg dataset returned by dataSubset(), where the input dataset is the Solberg dataset; note that population names are in lexicographic order, the only locus returned is the locus provided in the motif (i.e. DRB1), the addition of a new locus_allele column, and coordinates in the latit and longit columns are in Cartesian format:
+
 >dataSubset(solberg_dataset, “DRB1*26F~28E~30Y”)[c(1,2,300,600, 1000),]
 
       dataset        popname contin complex latit longit         coord locus allele_v2 allele_v3
@@ -161,6 +257,7 @@ countSpaces() returns a vector of the number of spaces between each set of non-s
 
 ``` 
 #number of whitespaces counted for row 3 in the alignment file 
+
 >countSpaces("ONE TWO  THREE   FOUR")
 [1] 1 2 3
 ``` 
