--- a/SSHAARP_package/SSHAARP/NEWS
+++ b/SSHAARP_package/SSHAARP/NEWS
@@ -1,3 +1,7 @@
+SSHAARP 0.7.1.9000 (10/9/2019)
+-----------------------------
+   * BLAASD() accommodations for HLA-TAP1 and HLA-TAP2
+
 SSHAARP 0.7.0.9000 (10/6/2019)
 -----------------------------
    * Changed motifCheck() function name to checkMotif()
