--- a/SSHAARP_package/SSHAARP/NEWS
+++ b/SSHAARP_package/SSHAARP/NEWS
@@ -1,3 +1,7 @@
+SSHAARP 0.9.1.9000 (12/13/2019)
+-----------------------------
+   * Changed formatting of "InDel_N" to "InDel-N""
+
 SSHAARP 0.9.0.9000 (12/4/2019)
 -----------------------------
    * Removed countSpaces() function and incorporated into BLAASD() script
