--- a/SSHAARP_package/SSHAARP/vignettes/vignette.Rmd
+++ b/SSHAARP_package/SSHAARP/vignettes/vignette.Rmd
@@ -12,7 +12,7 @@ vignette: >
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-* Package Version: 0.9.0.9000
+* Package Version: 0.9.1.9000
 
 # Overview
 The Searching Shared HLA Amino Acid Residue Prevalence (SSHAARP) Package processes amino acid alignments produced by the IPD-IMGT/HLA Database to identify user-defined amino acid residue motifs shared across HLA alleles, and calculates the frequencies of those motifs based on HLA allele frequency data. SSHAARP uses Generic Mapping Tools (GMT) software and the GMT R Package to generate global frequency heat maps that illustrate the distribution of each user-defined map around the globe. SSHAARP analyzes the allele frequency data described in Solberg et al. 2008, a global set of 497 population samples from 185 published datasets, representing 66,800 individuals.
@@ -115,7 +115,7 @@ Example output of checkMotif() for a motif with existent amino acid positions an
 1  L  A  L  A G D T R P R F L W  Q  L  K  F  E  C  H  F  F  N  G  T  E
 2  *  *  *  * * * * * * R F L W  Q  L  K  F  E  C  H  F  F  N  G  T  E
 3  *  *  *  * * * * * * R F L W  Q  L  K  F  E  C  H  F  F  N  G  T  E
-  23 24 25 26 InDel_1 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43
+  23 24 25 26 INDEL-1 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43
 1  R  V  R  L       .  L  E  R  C  I  Y  N  Q  E  E  S  V  R  F  D  S  D
 2  R  V  R  L       .  L  E  R  C  I  Y  N  Q  E  E  S  V  R  F  D  S  D
 3  R  V  R  L       .  L  E  R  C  I  Y  N  Q  E  E  S  V  R  F  D  S  D
@@ -198,7 +198,7 @@ findMotif() parses the provided amino-acid motif, which should be written as `lo
 5    *   *   *   *   *   *   *  *  *  *  *  *  *  *  *  * * * * * * R F L W  Q  L  K  F  E  C  H  F
 9    *   *   *   *   *   *   *  *  *  *  *  *  *  *  *  * * * * * * R F L W  Q  L  K  F  E  C  H  F
 10   *   *   *   *   *   *   *  *  *  *  *  *  *  *  *  * * * * * * R F L W  Q  L  K  F  E  C  H  F
-   18 19 20 21 22 23 24 25 26 InDel_1 27 28 29 30 31
+   18 19 20 21 22 23 24 25 26 INDEL-1 27 28 29 30 31
 1   F  N  G  T  E  R  V  R  L       .  L  E  R  C  I
 5   F  N  G  T  E  R  V  R  L       .  L  E  R  C  I
 9   F  N  G  T  E  R  V  R  L       .  L  E  R  C  I
