--- a/SSHAARP_package/SSHAARP/NEWS
+++ b/SSHAARP_package/SSHAARP/NEWS
@@ -1,6 +1,6 @@
 SSHAARP 0.9.1.9000 (12/13/2019)
 -----------------------------
-   * Changed formatting of "InDel_N" to "INDEL-N""
+   * Changed formatting of "InDel_N" to "INDEL-N"
 
 SSHAARP 0.9.0.9000 (12/4/2019)
 -----------------------------
