--- a/SSHAARP_package/SSHAARP/NEWS
+++ b/SSHAARP_package/SSHAARP/NEWS
@@ -8,7 +8,7 @@ SSHAARP 0.9.0.9000 (12/4/2019)
    * Changed amino acid positioning from actual coordinate system to alignment coordinate system
    * Added specCirc(), a function in BLAASD() to produce an accurate dataframe for DQB1 (see vignette under "BLAASD()" for more details)
    * Changes to vignette documentation
-   * Exon boundaries for all exons in protein coding genes in the IPD-IMGT/HLA Database V 3.38.0 release are now incorporated into SSHAARP as "AA_atlas".
+   * Exon boundaries for all exons in protein coding genes in the IPD-IMGT/HLA Database V 3.38.0 release are now incorporated into SSHAARP as "AA_atlas"
 
 
 SSHAARP 0.8.3.9000 (11/5/2019)
