--- a/SSHAARP_package/SSHAARP/NEWS
+++ b/SSHAARP_package/SSHAARP/NEWS
@@ -1,3 +1,10 @@
+SSHAARP 0.9.2.9000 (1/7/2019)
+-----------------------------
+   * Split DRB into DRB1, DRB3, DRB4, and DRB5 in IMGTprotalignments
+   * Fixed lack of reference sequence for DRB3/4/5 in IMGTprotalignments
+   * Fixed row numbers for DRB3/4/5 in IMGTprotalignments
+   * Added 'gmt' in front of gmt.system() arguments for PALM() due to GMT update
+
 SSHAARP 0.9.1.9000 (12/13/2019)
 -----------------------------
    * Changed formatting of "InDel_N" to "INDEL-N"
