--- a/SSHAARP_package/SSHAARP/NEWS
+++ b/SSHAARP_package/SSHAARP/NEWS
@@ -1,3 +1,8 @@
+SSHAARP 0.9.3.9000 (1/9/2019)
+-----------------------------
+   * Revisions to PALM() to remove reshape2 package functions due to deprecation
+   * Replaced previous reshape2 functionalities with the data.table package and custom code
+
 SSHAARP 0.9.2.9000 (1/7/2019)
 -----------------------------
    * Split DRB into DRB1, DRB3, DRB4, and DRB5 in IMGTprotalignments
