--- a/SSHAARP_package/SSHAARP/NEWS
+++ b/SSHAARP_package/SSHAARP/NEWS
@@ -1,3 +1,7 @@
+SSHAARP 0.9.4.9000 (2/3/2019)
+-----------------------------
+   *Updated motif maps provided as examples in vignette
+
 SSHAARP 0.9.3.9000 (1/9/2019)
 -----------------------------
    * Revisions to PALM() to remove reshape2 package functions due to deprecation
