--- a/SSHAARP_package/SSHAARP/NEWS
+++ b/SSHAARP_package/SSHAARP/NEWS
@@ -1,3 +1,22 @@
+SSHAARP 1.0.0 (3/23/2019)
+-----------------------------
+   * Description changes
+   * Adjusted PALM() to have temporary files stored in a temporary directory; final image is output in the user's initial working directory
+
+
+SSHAARP 1.0.0 (3/12/2019)
+-----------------------------
+   * Vignette changes
+   * Additional documentation to PALM()
+   * Changed some error messages in checkMotif() to warning messages
+
+
+SSHAARP 1.0.0 (3/9/2019)
+-----------------------------
+   * Fixed rounding issues in PALM()
+   * CRAN submission fixes
+   * Ouputs a message if max allele frequency is too small to generate an accurate map
+
 SSHAARP 1.0.0 (2/19/2019)
 -----------------------------
    * Submission to CRAN
