v 2.0.4 -- SEE NEWS FOR DETAILS

--- a/NEWS
+++ b/NEWS
@@ -1,18 +1,18 @@
 SSHAARP 2.0.3 (11/20/2024)
 -----------------------------
-  * vignette changes
-  * added checks to readFilename to check if user provided dataset structure is the same as bundled datasets
-  * documentation + example revisions
+  * Vignette changes
+  * Added checks to readFilename to check if user provided dataset structure is the same as bundled datasets
+  * Documentation + example revisions
 
 SSHAARP 2.0.2 (11/12/2024)
 -----------------------------
-  * cleaned up references to the HLAalignment object
+  * Cleaned up references to the HLAalignment object
 
 SSHAARP 2.0.1 (10/24/2024)
 -----------------------------
-  * vignette changes
-  * changed default resolution and documentation in PALM
-  * removed the IMGTprotalignments.rda object and replaced with one call to
+  * Vignette changes
+  * Changed default resolution and documentation in PALM
+  * Removed the IMGTprotalignments.rda object and replaced with one call to
   buildAlignments in PALM
 
 SSHAARP 2.0.0 (09/12/2024)
